_INSTALL_/01-ACM/configure-observability/optional-minio/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  name: console-minio
  namespace: openshift-operators
spec:
  port:
    targetPort: http
  tls:
    termination: edge
  to:
    kind: Service
    name: console
    weight: 100
  wildcardPolicy: None

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  name: console
  namespace: minio-s3
spec:
  port:
    targetPort: https-console
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: passthrough
  to:
    kind: Service
    name: minio-s3-console
    weight: 100
  wildcardPolicy: None

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  name: minio
  namespace: minio-s3
spec:
  port:
    targetPort: https-minio
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: passthrough
  to:
    kind: Service
    name: minio
    weight: 100
  wildcardPolicy: None
